<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B6E70">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/measure"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/my_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/input"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:hint="@string/enterValue"
        android:textSize="30sp"
        android:textAlignment="center"
        android:background="@drawable/textbox_design"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"/>

    <Button
        android:id="@+id/miles"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/miles"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"/>

    <Button
        android:id="@+id/km"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/km"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:textColor="@color/black"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"/>

    <Button
        android:id="@+id/gallons"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/gallons"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="293dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"/>

    <Button
        android:id="@+id/liters"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/liters"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="298dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"/>

    <Button
        android:id="@+id/pounds"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/pounds"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"/>

    <Button
        android:id="@+id/kg"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/kg"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"/>

    <Button
        android:id="@+id/fahrenheit"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/fahrenheit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"/>

    <Button
        android:id="@+id/celsius"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/celsius"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"/>

    <TextView
        android:id="@+id/valueDisplay"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:text=""
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/textbox_design"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/exit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"/>




</androidx.constraintlayout.widget.ConstraintLayout>