<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B6E70">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/my_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/measurementsPage"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:text="@string/measure"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>


    <Button
        android:id="@+id/currencyPage"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:text="@string/currency"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/weatherPage"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:text="Weather"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:text="@string/exit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="391dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"/>




</androidx.constraintlayout.widget.ConstraintLayout>