<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B6E70">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/currency"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:fontFamily="@font/my_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/exchange"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/my_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="196dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="text"
        android:hint="$"
        android:textSize="25sp"
        android:textAlignment="center"
        android:background="@drawable/textbox_design"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="214dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"/>

    <Button
        android:id="@+id/usDollar"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/us"
        android:textStyle="bold"
        android:fontFamily="@font/my_font"
        android:textSize="20sp"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"/>

    <Button
        android:id="@+id/ausDollar"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/au"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/my_font"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"/>

    <TextView
        android:id="@+id/display"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        android:background="@drawable/textbox_design"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="472dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/exit"
        android:textStyle="bold"
        android:fontFamily="@font/my_font"
        android:textSize="20sp"
        android:background="@drawable/button_design"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="572dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"/>



</androidx.constraintlayout.widget.ConstraintLayout>